--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,28 @@
         android:theme="@style/Theme.MealerProject"
         tools:targetApi="31">
         <activity
-            android:name=".SelectCheckImgActivity"
+            android:name=".activities.WelcomeClientActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.WelcomeCookActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.WelcomeAdminActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.ComplaintActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
